--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<version>1.15.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -81,6 +87,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-STSystem</finalName>
 	</build>
 
 </project>
