--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:8084/mydb
+spring.datasource.url=jdbc:mysql://stsystemdb.cezyaqce2rse.eu-west-2.rds.amazonaws.com:3306/stsystemdb
 spring.datasource.username=root
-spring.datasource.password=poorpeople5S!
+spring.datasource.password=123456789
 
 # Hibernate
 
@@ -15,3 +15,4 @@ logging.level.org.hibernate.type=TRACE
 
 spring.security.user.name=sid
 spring.security.user.password=1234footballadmin
+server.port=5000
